
EXTRA_DIST = get-state list-profiles list-connections select-connection \
		list-devices enable-device disable-device start-scanning \
		list-networks select-network disable-network create-network \
		set-passphrase set-address set-policy test-manager \
		connect-network disconnect-network simple-agent \
		show-introspection test-compat monitor-connman debug-connman

MAINTAINERCLEANFILES = Makefile.in
