
EXTRA_DIST = get-state list-profiles list-connections select-connection \
		list-devices enable-device disable-device start-scanning \
		list-networks select-network disable-network create-network \
		set-passphrase set-address set-policy set-priority \
		connect-network disconnect-network join-network \
		simple-agent show-introspection test-compat test-manager \
		test-connman monitor-connman monitor-services debug-connman

MAINTAINERCLEANFILES = Makefile.in
