
EXTRA_DIST = get-state list-profiles list-services connect-service \
		list-connections select-connection \
		list-devices enable-device disable-device start-scanning \
		list-networks set-passphrase set-address \
		simple-agent show-introspection test-compat test-manager \
		test-connman monitor-connman monitor-services debug-connman

MAINTAINERCLEANFILES = Makefile.in
